# xp_activate32

./: .gitattributes  .gitignore  BUILD.gn  Makefile  Makefile.linux  README.md  TODO.md  XPConfirmationIDKeygen.vcxproj  XPConfirmationIDKeygen.vcxproj.filters  build.bat  build_debug.bat  build_manual.bat  build_mingw.sh  build_ninja.cmd  build_release.bat  resource.rc  xp_activate32.bat  xp_activate32.h  xp_activate32.sln  xp_activate32.vcxproj  xp_activate32.vcxproj.filters
orig/: xp_activate32_src_archive.torrent
src/: constants.h  framework.h  globals.h  keygen.cc  keygen.h  resource.h  resource.rc  strings.cc  strings.h  utils.cc  utils.h  version.cc  version.h  xp_activate32.cc  xp_activate32.h  xp_activate32.manifest
