# xp_activate32

# Main executable
executable("xp_activate32") {
  configs -= [ "//build/config/win:console_subsystem" ]

  configs += [
    "//build/config/win:windowed_subsystem",
    ":xp_activate32_config",
  ]

  deps = [
    ":xp_activate32_sources",
  ]
}

source_set("xp_activate32_sources") {
  # Must explicitly set this for sources
  configs += [ "//build/config/win:windowed_subsystem", ]
  configs += [ ":xp_activate32_config", ]

  sources = [
    "src/constants.h",
    "src/framework.h",
    "src/globals.h",
    "src/keygen.h",
    "src/strings.h",
    "src/resource.h",
    "src/utils.h",
    "src/xp_activate32.h",
  ]

  sources += [
    "src/keygen.cc",
    "src/strings.cc",
    "src/resource.rc",
    "src/utils.cc",
    "src/xp_activate32.cc",
  ]
}

# Program-specific build config
config("xp_activate32_config") {
  defines = []
  cflags = []
  ldflags = []
  libs = [
    "ole32",
    "oleaut32",
  ]
}
